# api/controllers/movie.js
@@ -11,7 +11,7 @@
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
 var util = require('util');
-
+var movies = require('../helpers/dbmovies')
 /*
  Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
 
@@ -43,77 +43,13 @@ function searchMovieByName(req, res) {
   console.log("Movie Name: " + movieName);
 
   // this sends back a JSON response which is a single string
-  res.json(searchMovie(requestDate, movieName));
-}
-
-function searchMovie(requestDate, movieName) {
-    var movies = [
-        {
-            "_id": guid(),
-            "title": "Bairavaa",
-            "posterUrl": "https://upload.wikimedia.org/wikipedia/en/4/46/Bairavaa_movie_poster.jpg",
-            "director": "Bharathan",
-            "cast": "Vijay, Keerthy Suresh, Sathish, Jagapati Babu, Daniel Balaji",
-            "musicDirector": "",
-            "genre": "Action masala",
-            "producer": "Vijaya Productions",
-            "opening": "20170112"
-        },
-        {
-            "_id": guid(),
-            "title": "Koditta Idangalai Nirappuga",
-            "posterUrl": "https://upload.wikimedia.org/wikipedia/en/a/ae/Koditta_Idangalai_Nirappuga_poster.jpg",
-            "director": "R. Parthiepan",
-            "cast": "Shanthanu Bhagyaraj, Parvathy Nair, R. Parthiepan, Thambi Ramaiah",
-            "musicDirector": "C. Sathya",
-            "genre": "Comedy thriller",
-            "producer": "Reel Estate Company & Bioscope Film Frames",
-            "opening": "20170114"
-        },
-        {
-            "_id": guid(),
-            "title": "Adhe Kangal",
-            "posterUrl": "https://upload.wikimedia.org/wikipedia/en/c/c5/Adhe_Kangal_2017.jpg",
-            "director": "Rohin Venkatesan",
-            "cast": "Kalaiyarasan, Sshivada, Janani Iyer, Bala Saravanan",
-            "musicDirector": "Ghibran",
-            "genre": "Crime thriller",
-            "producer": "Thirukumaran Entertainment",
-            "opening": "20170126"
-        },
-        {
-            "_id": guid(),
-            "title": "Bogan",
-            "posterUrl": "https://upload.wikimedia.org/wikipedia/en/5/53/Bogan_2017_poster.jpg",
-            "director": "Lakshman",
-            "cast": "Jayam Ravi, Arvind Swamy, Hansika Motwani, Varun, Akshara Gowda",
-            "musicDirector": "",
-            "genre": "Supernatural thriller",
-            "producer": "Prabhu Deva Studios",
-            "opening": "20170202"
-        },
-        {
-            "_id": guid(),
-            "title": "Si3",
-            "posterUrl": "https://upload.wikimedia.org/wikipedia/en/8/87/Singam_3_poster.jpg",
-            "director": "Hari",
-            "cast": "Suriya, Shruti Haasan, Anushka Shetty, Thakur Anoop Singh",
-            "musicDirector": "Harris Jayaraj" ,
-            "genre": "Action masala",
-            "producer": "Studio Green",
-            "opening": "20170209"
-        }
-    ]
-
-    return movies;
-}
-
-function guid() {
-    function s4() {
-      return Math.floor((1 + Math.random()) * 0x10000)
-        .toString(16)
-        .substring(1);
+  movies.search(requestDate, movieName, 
+    function(data) {
+      res.json(data);
+    }, 
+    function(error) {
+      console.log(error);
+      res.json({"Error": error});
     }
-    return s4() + s4() + '-' + s4() + '-' + s4() + '-' +
-      s4() + '-' + s4() + s4() + s4();
-  }
+  );
+}
